Fixed an issue where any slug changes were being overwritten when saving a product Fixed a major issues with tags replicating due to un-escaped single-quotes Fixed an issue with the parent category selector in the category editor not getting set to the current parent when editing an existing category, resetting the category's parent to null when saving the category Fixed dynamic module loading issues on Windows-based hosting platforms Fixed the image and file uploads when running Flash 10 with WordPress 2.6.x Fixed a bug in setting an incorrect default for the receipt_copy setting Shopp-related support files such as CSS and JS behaviors are now loaded site-wide to support shopp() tags used outside of Shopp-powered pages Enhanced the DatabaseObject load method to support multiple lookup criteria Fixed a small layout bug left over in the payment gateway module settings Added capability to show checkout state/province fields as text inputs instead of drop-down menus
git-svn-id: file:///Users/jond/svngit/svnrepos/shopp/trunk@252 846ab242-8549-0410-9a75-dfdbdae9473e

--- a/shopp/core/ui/styles/catalog.css
+++ b/shopp/core/ui/styles/catalog.css
@@ -88,8 +88,8 @@ div.clear,
 /**
  * Product Page Gallery
  **/
-#gallery { float: left; }
-#gallery ul { margin: 0; padding: 0 !important; position: relative; list-style: none !important; text-indent: 0; width: auto; }
+#gallery { float: left; display: block; }
+#gallery ul { display: block; margin: 0; padding: 0 !important; position: relative; list-style: none !important; text-indent: 0; width: auto; }
 #gallery ul li:before { content: ""; }
 #gallery .previews { position: relative; margin: 0 !important; }
 #gallery .previews li { position: absolute; width: <?php echo $this->Settings->get('gallery_small_width'); ?>px; height: <?php echo $this->Settings->get('gallery_small_height'); ?>px; line-height: <?php echo $this->Settings->get('gallery_small_height'); ?>px; visibility: hidden; top: 0; left: 0; margin: 0; display: block; text-align: center; }
@@ -99,7 +99,8 @@ div.clear,
 #gallery .previews li.fill { position: relative; }
 #gallery .previews li.active { visibility: visible; }
 #gallery .thumbnails ul { padding: 0; }
-#gallery .thumbnails li { position: relative; display: inline; visibility: visible; height: auto; line-height: 1; top: auto; left: auto; }
+#gallery .thumbnails li { position: relative; display: inline; visibility: visible; height: auto; line-height: 1; top: auto; left: auto; margin: 0 0 0 10px; }
+#gallery .thumbnails li.first { margin-left: 0; }
 
 /**
  * Debug Console
